--- a/src/app/components/address-autocomplete/address-autocomplete.component.html
+++ b/src/app/components/address-autocomplete/address-autocomplete.component.html
@@ -14,7 +14,7 @@
         spellcheck="off"
         mdbInput
       />
-      <label for="address">Address</label>
+      <label for="address">Restaurant Address</label>
     </div>
     <div class="country-select">
       <select class="browser-default custom-select" (change)="onChange($event)">
