--- a/src/app/components/admin-board/admin-board.component.css
+++ b/src/app/components/admin-board/admin-board.component.css
@@ -2,10 +2,12 @@
   padding: 100px;
 }
 
-.admin-board h3 {
-  padding: 20px 0 20px 0;
+.admin-board h2 {
+  padding: 20px 0 50px 0;
+  font-family: "Lobster Two";
+  text-align: center;
 }
 
 .add-new {
-  padding-top: 20px;
+  padding-top: 50px;
 }
