--- a/src/app/components/contact-tracing/contact-tracing.component.html
+++ b/src/app/components/contact-tracing/contact-tracing.component.html
@@ -39,11 +39,12 @@
           ----------
         </div>
         <div>
-          Pour votre sécurité et celle de nos employes, veuillez prendre le
-          temps de remplir notre forme pour la recherche des contacts en raison
-          du COVID-19. Vos informations resteront strictement confidentielles et
-          ne seront utilisées que pour la recherche des contacts. Nous vous
-          remercions de nous aider à assurer notre sécurité à tous.
+          Pour votre sécurité et celle de nos employés, veuillez prendre le
+          temps de remplir notre formulaire pour la recherche des contacts en
+          raison du COVID-19. Vos informations resteront strictement
+          confidentielles et ne seront utilisées que pour la recherche des
+          contacts. Nous vous remercions de nous aider à assurer notre sécurité
+          à tous.
         </div>
         <form [formGroup]="customerForm">
           <div class="md-form mb-5">
@@ -117,7 +118,7 @@
           <div class="agreement-checkbox">
             <mdb-checkbox formControlName="terms"
               >By clicking this box I agree to the
-              <a href="https://www.bien-menu.com/terms" target="_blank"
+              <a href="https://www.bien-menu.com/privacy" target="_blank"
                 >terms and conditions</a
               >.
             </mdb-checkbox>
