--- a/src/app/components/reset-password/reset-password.component.html
+++ b/src/app/components/reset-password/reset-password.component.html
@@ -11,57 +11,59 @@
             <div id="successMsg" *ngIf="successMessage">
               <span>{{ successMessage }}</span>
             </div>
-            <form [formGroup]="resetForm" (ngSubmit)="ResetPassword()">
-              <div class="form-group">
-                <input
-                  type="password"
-                  formControlName="newPassword"
-                  class="form-control"
-                  [ngClass]="{
-                    'is-invalid': submitted && f.newPassword.errors
-                  }"
-                />
-                <div
-                  *ngIf="submitted && f.newPassword.errors"
-                  class="invalid-feedback"
-                >
-                  <div *ngIf="f.newPassword.errors.required">
-                    Password is required
-                  </div>
-                  <div *ngIf="f.newPassword.errors.minlength">
-                    Password must be at least 6 characters
-                  </div>
-                </div>
-              </div>
-              <div class="form-group">
-                <input
-                  type="password"
-                  formControlName="confirmPassword"
-                  class="form-control"
-                  [ngClass]="{
-                    'is-invalid': submitted && f.confirmPassword.errors
-                  }"
-                />
-                <div
-                  *ngIf="submitted && f.confirmPassword.errors"
-                  class="invalid-feedback"
-                >
-                  <div *ngIf="f.confirmPassword.errors.required">
-                    Confirm Password is required
-                  </div>
-                  <div *ngIf="f.confirmPassword.errors.mustMatch">
-                    Passwords must match
+            <div *ngIf="!successMessage">
+              <form [formGroup]="resetForm" (ngSubmit)="ResetPassword()">
+                <div class="form-group">
+                  <input
+                    type="password"
+                    formControlName="newPassword"
+                    class="form-control"
+                    [ngClass]="{
+                      'is-invalid': submitted && f.newPassword.errors
+                    }"
+                  />
+                  <div
+                    *ngIf="submitted && f.newPassword.errors"
+                    class="invalid-feedback"
+                  >
+                    <div *ngIf="f.newPassword.errors.required">
+                      Password is required
+                    </div>
+                    <div *ngIf="f.newPassword.errors.minlength">
+                      Password must be at least 6 characters
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="form-group">
-                <div>
-                  <button type="submit" class="btn btn-primary">
-                    Update Password
-                  </button>
+                <div class="form-group">
+                  <input
+                    type="password"
+                    formControlName="confirmPassword"
+                    class="form-control"
+                    [ngClass]="{
+                      'is-invalid': submitted && f.confirmPassword.errors
+                    }"
+                  />
+                  <div
+                    *ngIf="submitted && f.confirmPassword.errors"
+                    class="invalid-feedback"
+                  >
+                    <div *ngIf="f.confirmPassword.errors.required">
+                      Confirm Password is required
+                    </div>
+                    <div *ngIf="f.confirmPassword.errors.mustMatch">
+                      Passwords must match
+                    </div>
+                  </div>
                 </div>
-              </div>
-            </form>
+                <div class="form-group">
+                  <div>
+                    <button type="submit" class="btn btn-primary">
+                      Update Password
+                    </button>
+                  </div>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
