--- a/src/app/components/restaurant-detail/restaurant-detail.component.css
+++ b/src/app/components/restaurant-detail/restaurant-detail.component.css
@@ -12,7 +12,7 @@
 
 .restaurant-detail h2 {
   padding: 20px 0 50px 0;
-  font-family: "Lobster Two", cursive;
+  font-family: "Lobster Two";
   text-align: center;
 }
 
