--- a/src/app/components/add-restaurant/add-restaurant.component.html
+++ b/src/app/components/add-restaurant/add-restaurant.component.html
@@ -169,7 +169,11 @@
         type="submit"
         class="submit-button"
         mat-raised-button
-        [disabled]="!restaurantForm.valid || menus.length !== menuFiles.size"
+        [disabled]="
+          !restaurantForm.valid ||
+          menus.length !== menuFiles.size ||
+          !isAddressSet
+        "
       >
         Submit
       </button>
