--- a/src/app/components/admin-board/admin-board.component.html
+++ b/src/app/components/admin-board/admin-board.component.html
@@ -1,7 +1,7 @@
 <div class="admin-board container-fluid">
   <div class="admin-board-content container">
     <div class="d-flex flex-column" *ngIf="accessAllowed">
-      <h3>All Restaurants</h3>
+      <h2>All Restaurants</h2>
       <ul class="restaurants list-group">
         <li
           *ngFor="let restaurant of restaurants"
@@ -10,22 +10,22 @@
           {{ restaurant.name }}
           <div class="d-flex justify-content-between">
             <a routerLink="/menus/{{ restaurant._id }}">
-              <button mat-raised-button class="btn">Menus</button>
+              <button mat-raised-button class="btn">View Menus</button>
             </a>
             <div class="divider"></div>
             <a routerLink="/detail/{{ restaurant._id }}">
-              <button mat-raised-button class="btn">Manage</button>
+              <button mat-raised-button class="btn">Manage Menus</button>
             </a>
             <div class="divider"></div>
             <a routerLink="/qrcode/{{ restaurant._id }}/{{ restaurant.color }}">
-              <button mat-raised-button class="btn">QR Code</button>
+              <button mat-raised-button class="btn">Get QR Code</button>
             </a>
           </div>
         </li>
       </ul>
       <div class="add-new">
         <a routerLink="/add">
-          <button mat-raised-button class="btn">Add New</button>
+          <button mat-raised-button class="btn">Add Restaurant</button>
         </a>
       </div>
     </div>
