--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,33 +1,55 @@
-<div class="login container-fluid">
-  <div class="login-content card card-container">
+<div class="login-container container-fluid">
+  <div class="login-container-content card card-container">
     <img
       id="profile-img"
       src="./assets/img/bienmenu-long-logo.png"
       class="profile-img-card"
     />
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-      <div class="form-group">
-        <label>Username/Email</label>
+      <div class="md-form mb-5">
         <input
           type="text"
+          id="username"
           formControlName="username"
           class="form-control"
-          [ngClass]="{ 'is-invalid': isSubmitted && f.username.errors }"
+          mdbInput
+          mdbValidate
+          required
         />
-        <div *ngIf="isSubmitted && f.username.errors" class="invalid-feedback">
-          <div *ngIf="f.username.errors.required">Username is required</div>
+        <label for="username">Username/Email</label>
+        <mdb-error
+          *ngIf="f.username.invalid && (f.username.dirty || f.username.touched)"
+        >
+          <span *ngIf="f.username.errors.required"
+            >Username or email is required</span
+          >
+        </mdb-error>
+        <div style="padding-top: 5px; text-align: right;">
+          <a [routerLink]="['/pricing-plans']">
+            Not a member? Sign up now!
+          </a>
         </div>
       </div>
-      <div class="form-group">
-        <label>Password</label>
+      <div class="md-form mb-5">
         <input
           type="password"
+          id="password"
           formControlName="password"
           class="form-control"
-          [ngClass]="{ 'is-invalid': isSubmitted && f.password.errors }"
+          mdbInput
+          mdbValidate
+          required
         />
-        <div *ngIf="isSubmitted && f.password.errors" class="invalid-feedback">
-          <div *ngIf="f.password.errors.required">Password is required</div>
+        <label for="password">Password</label>
+        <mdb-error
+          *ngIf="f.password.invalid && (f.password.dirty || f.password.touched)"
+        >
+          <span *ngIf="f.password.errors.required">Password is required</span>
+        </mdb-error>
+        <div style="padding-top: 5px; text-align: right;">
+          <a [routerLink]="['/request-reset-password']">
+            Forgot Password?
+          </a>
         </div>
       </div>
       <div class="form-group text-center">
@@ -35,15 +57,15 @@
           mat-raised-button
           color="primary"
           [disabled]="isSubmitted && !isLoginFailed"
-          class="btn"
+          class="login-btn btn"
         >
           Login
         </button>
       </div>
-      <div class="alert alert-danger" *ngIf="isSubmitted && isLoginFailed">
-        Login failed.<br />{{ errorMessage }}
-      </div>
     </form>
+    <div class="alert alert-danger" *ngIf="isSubmitted && isLoginFailed">
+      Login failed.<br />{{ errorMessage }}
+    </div>
     <div class="alert alert-success" *ngIf="isLoggedIn">
       Logged in Successfully.
     </div>
