--- a/src/app/components/menu-list/menu-list.component.html
+++ b/src/app/components/menu-list/menu-list.component.html
@@ -13,6 +13,7 @@
         <li
           *ngFor="let menu of menus; let i = index"
           (click)="openMenu(menu.filename)"
+          [class.disabled]="isOpeningMenu"
           class="menu-item list-group-item d-flex justify-content-between align-items-center"
         >
           <div class="menu-item-content d-flex w-100 justify-content-between">
