--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -1,3 +1,29 @@
-.profile {
-  padding-top: 80px;
+.profile-container {
+  position: relative;
+  overflow: auto;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card {
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
+  border: none;
+  width: 500px;
+  margin: auto;
+}
+
+.card-title {
+  font-size: 22px;
+  text-align: center;
+}
+
+.card-text {
+  text-align: center;
+}
+
+.upgrade-btn {
+  margin-right: 20px;
 }
