--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,37 +1,60 @@
-<div class="profile container-fluid">
-  <div class="profile-content card card-container" *ngIf="currentUser">
-    <h3>
-      Welcome <strong>{{ currentUser.firstName }}</strong
-      >!
-    </h3>
+<div class="profile-container container-fluid">
+  <div class="profile-container-content" *ngIf="currentUser">
+    <div class="card" style="width: 40rem;">
+      <img
+        class="card-img-top"
+        src="./assets/img/bienmenu-logo.png"
+        alt="Bienmenu"
+        style="width: 100px; margin: 20px;"
+      />
+      <div class="card-body">
+        <h5 class="card-title">
+          Welcome <strong>{{ currentUser.firstName }}</strong
+          >!
+        </h5>
+        <p class="card-text">
+          Here you can see your basic profile info.
+        </p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+          <strong>Name:</strong> {{ currentUser.firstName }}&nbsp;{{
+            currentUser.lastName
+          }}
+        </li>
+        <li class="list-group-item">
+          <strong>Email:</strong> {{ currentUser.email }}
+        </li>
+        <li class="list-group-item">
+          <strong>Current Plan:</strong> {{ currentUser.plan }}
+        </li>
+        <li class="list-group-item">
+          <strong>Restaurants:</strong>
+          <ul>
+            <li *ngFor="let restaurant of currentUser.restaurants">
+              {{ restaurant.name }}
+            </li>
+          </ul>
+        </li>
+      </ul>
+      <div class="card-body">
+        <button
+          mat-raised-button
+          class="upgrade-btn btn"
+          [disabled]="currentUser.plan !== 'basic'"
+          (click)="goToPricing()"
+        >
+          Upgrade Your Plan
+        </button>
 
-    <!-- <p>
-    <strong>Token:</strong>
-    {{ currentUser.accessToken.substring(0, 20) }} ...
-    {{ currentUser.accessToken.substr(currentUser.accessToken.length - 20) }}
-  </p> -->
-    <p>
-      <strong>Name:</strong>
-      {{ currentUser.firstName }}&nbsp;{{ currentUser.lastName }}
-    </p>
-    <p>
-      <strong>Email:</strong>
-      {{ currentUser.email }}
-    </p>
-    <!-- <strong>Roles:</strong>
-  <ul>
-    <li *ngFor="let role of currentUser.roles">
-      {{ role }}
-    </li>
-  </ul> -->
-    <strong>Restaurants:</strong>
-    <ul>
-      <li *ngFor="let restaurant of currentUser.restaurants">
-        {{ restaurant.name }}
-      </li>
-    </ul>
-
-    <div class="alert alert-danger" *ngIf="!loggedIn">
+        <a class="card-link waves-light" href="mailto:info@bienmenu.com">
+          <button mat-raised-button class="contact-btn btn">
+            Contact Us
+          </button>
+        </a>
+      </div>
+    </div>
+    <div class="alert alert-danger" *ngIf="!isLoggedIn">
       Please login to view your profile.
     </div>
   </div>
