--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -1,14 +1,14 @@
-.register {
+.register-container {
+  padding-top: 80px;
   position: relative;
   overflow: auto;
-  height: 100vh;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.register-content {
+.register-container-content {
   border: none;
   /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
   /* padding: 15px; */
@@ -17,13 +17,22 @@
 label {
   display: block;
   width: 12em;
+  color: #009688;
+}
+
+.field-name {
+  width: 12em;
   margin: 0.5em 0;
-  color: #2cbbad;
-  font-weight: bold;
+  color: #009688;
 }
 
 input {
   height: 2em;
   font-size: 1em;
   padding-left: 0.4em;
+}
+
+.register-btn {
+  margin-bottom: 50px;
+  width: 100%;
 }
