--- a/src/app/components/request-reset-password/request-reset-password.component.html
+++ b/src/app/components/request-reset-password/request-reset-password.component.html
@@ -11,33 +11,35 @@
             <div id="successMsg" *ngIf="successMessage">
               <span>{{ successMessage }}</span>
             </div>
-            <form
-              action=""
-              [formGroup]="RequestResetForm"
-              (ngSubmit)="RequestResetUser(RequestResetForm)"
-            >
-              <div class="form-group">
-                <input
-                  _ngcontent-c0=""
-                  class="form-control form-control-lg"
-                  type="text"
-                  id="email"
-                  formControlName="email"
-                />
-                <span
-                  *ngIf="!RequestResetForm.get('email').valid && !IsvalidForm"
-                  class="help-block"
-                  >Please enter a valid email!</span
-                >
-              </div>
-              <div class="form-group">
-                <div>
-                  <button type="submit" class="btn btn-primary">
-                    Reset Password
-                  </button>
+            <div *ngIf="!successMessage">
+              <form
+                action=""
+                [formGroup]="RequestResetForm"
+                (ngSubmit)="RequestResetUser(RequestResetForm)"
+              >
+                <div class="form-group">
+                  <input
+                    _ngcontent-c0=""
+                    class="form-control form-control-lg"
+                    type="text"
+                    id="email"
+                    formControlName="email"
+                  />
+                  <span
+                    *ngIf="!RequestResetForm.get('email').valid && !IsvalidForm"
+                    class="help-block"
+                    >Please enter a valid email!</span
+                  >
                 </div>
-              </div>
-            </form>
+                <div class="form-group">
+                  <div>
+                    <button type="submit" class="btn btn-primary">
+                      Reset Password
+                    </button>
+                  </div>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
