--- a/src/app/components/restaurant-detail/restaurant-detail.component.html
+++ b/src/app/components/restaurant-detail/restaurant-detail.component.html
@@ -22,6 +22,47 @@
         </div>
         <div class="list-group-item" *ngIf="userHasContactTracing">
           <div class="d-flex contact-tracing-setting">
+            <span class="restaurant-detail-field">Contact Tracing: </span>
+            <div
+              class="enabled-disabled"
+              *ngIf="restaurant.tracingEnabled"
+              style="padding: 0 30px 0 15px; color: green;"
+            >
+              Enabled
+            </div>
+            <div
+              class="enabled-disabled"
+              *ngIf="!restaurant.tracingEnabled"
+              style="padding: 0 30px 0 15px; color: red;"
+            >
+              Disabled
+            </div>
+            <div class="contact-tracing-select">
+              <select
+                class="browser-default custom-select"
+                [(ngModel)]="selectedCTSetting"
+                (ngModelChange)="onChange($event)"
+              >
+                <option value="true">Enable Contact Tracing</option>
+                <option value="false">Disable Contact Tracing</option>
+              </select>
+            </div>
+            <div class="tracing-btn">
+              <button
+                mat-raised-button
+                type="button"
+                class="btn"
+                (click)="saveContactTracing()"
+                [disabled]="
+                  selectedCTSetting == restaurant.tracingEnabled ||
+                  isCTSettingSubmitted
+                "
+              >
+                Save
+              </button>
+            </div>
+          </div>
+          <!-- <div class="d-flex contact-tracing-setting">
             <div>
               <span class="restaurant-detail-field">Contact Tracing: </span
               >{{ getContactTracingValue() }}
@@ -43,7 +84,7 @@
                 Save
               </button>
             </div>
-          </div>
+          </div> -->
         </div>
         <div class="list-group-item restaurant-detail-section-header">
           <h4>Restaurant Menus</h4>
@@ -124,7 +165,7 @@
             You can upgrade your plan to add more!
           </div>
           <div *ngIf="maxMenuCountReached || !menuUpdateAllowed">
-            <a href="https://www.bien-menu.com/plans-pricing">
+            <a routerLink="/pricing-plans">
               <button mat-raised-button class="btn">Upgrade Now</button>
             </a>
           </div>
