fix reset password visuals

--- a/src/app/components/request-reset-password/request-reset-password.component.html
+++ b/src/app/components/request-reset-password/request-reset-password.component.html
@@ -6,37 +6,51 @@
           <h5 class="card-title text-center">Please enter your email below</h5>
           <div>
             <div id="errorMsg" *ngIf="errorMessage">
-              <span>{{ errorMessage }}</span>
+              Failed to process request:<span>{{ errorMessage }}</span>
             </div>
             <div id="successMsg" *ngIf="successMessage">
-              <span>{{ successMessage }}</span>
+              <span>{{ successMessage }}</span> Check your email (and spam)
+              folder for instructions.
             </div>
             <div *ngIf="!successMessage">
               <form
                 action=""
-                [formGroup]="RequestResetForm"
-                (ngSubmit)="RequestResetUser(RequestResetForm)"
+                [formGroup]="requestResetForm"
+                (ngSubmit)="requestResetUser()"
               >
-                <div class="form-group">
+                <div class="md-form mb-5">
                   <input
-                    _ngcontent-c0=""
-                    class="form-control form-control-lg"
                     type="text"
                     id="email"
                     formControlName="email"
+                    class="form-control"
+                    mdbInput
+                    mdbValidate
+                    required
                   />
-                  <span
-                    *ngIf="!RequestResetForm.get('email').valid && !IsvalidForm"
-                    class="help-block"
-                    >Please enter a valid email!</span
+                  <label for="email">Email</label>
+                  <mdb-error
+                    *ngIf="
+                      f.email.invalid && (f.email.dirty || f.email.touched)
+                    "
                   >
+                    <span *ngIf="f.email.errors.required"
+                      >Email is required before submitting this form</span
+                    >
+                    <span *ngIf="f.email.errors.email"
+                      >Please enter a valid email</span
+                    >
+                  </mdb-error>
                 </div>
-                <div class="form-group">
-                  <div>
-                    <button type="submit" class="btn btn-primary">
-                      Reset Password
-                    </button>
-                  </div>
+                <div class="form-group text-center">
+                  <button
+                    mat-raised-button
+                    color="primary"
+                    [disabled]="requestResetForm.invalid || successMessage"
+                    class="reset-btn btn"
+                  >
+                    Reset Password
+                  </button>
                 </div>
               </form>
             </div>
