--- a/src/app/components/reset-password/reset-password.component.html
+++ b/src/app/components/reset-password/reset-password.component.html
@@ -12,55 +12,67 @@
               <span>{{ successMessage }}</span>
             </div>
             <div *ngIf="!successMessage">
-              <form [formGroup]="resetForm" (ngSubmit)="ResetPassword()">
-                <div class="form-group">
+              <form [formGroup]="resetForm" (ngSubmit)="resetPassword()">
+                <div class="md-form mb-5">
                   <input
                     type="password"
+                    id="newPassword"
                     formControlName="newPassword"
                     class="form-control"
-                    [ngClass]="{
-                      'is-invalid': submitted && f.newPassword.errors
-                    }"
+                    mdbInput
+                    mdbValidate
+                    required
                   />
-                  <div
-                    *ngIf="submitted && f.newPassword.errors"
-                    class="invalid-feedback"
+                  <label for="newPassword">New Password</label>
+                  <mdb-error
+                    *ngIf="
+                      f.newPassword.invalid &&
+                      (f.newPassword.dirty || f.newPassword.touched)
+                    "
                   >
-                    <div *ngIf="f.newPassword.errors.required">
-                      Password is required
-                    </div>
-                    <div *ngIf="f.newPassword.errors.minlength">
-                      Password must be at least 6 characters
-                    </div>
-                  </div>
+                    <span *ngIf="f.newPassword.errors.required"
+                      >New password is required before submitting this
+                      form</span
+                    >
+                    <span *ngIf="f.newPassword.errors.minlength"
+                      >Password must be at least 6 characters</span
+                    >
+                  </mdb-error>
                 </div>
-                <div class="form-group">
+                <div class="md-form mb-5">
                   <input
                     type="password"
+                    id="confirmPassword"
                     formControlName="confirmPassword"
                     class="form-control"
-                    [ngClass]="{
-                      'is-invalid': submitted && f.confirmPassword.errors
-                    }"
+                    mdbInput
+                    mdbValidate
+                    required
                   />
-                  <div
-                    *ngIf="submitted && f.confirmPassword.errors"
-                    class="invalid-feedback"
+                  <label for="confirmPassword">New Password</label>
+                  <mdb-error
+                    *ngIf="
+                      f.confirmPassword.invalid &&
+                      (f.confirmPassword.dirty || f.confirmPassword.touched)
+                    "
                   >
-                    <div *ngIf="f.confirmPassword.errors.required">
-                      Confirm Password is required
-                    </div>
-                    <div *ngIf="f.confirmPassword.errors.mustMatch">
-                      Passwords must match
-                    </div>
-                  </div>
+                    <span *ngIf="f.confirmPassword.errors.required"
+                      >Must confirm password before submitting this form</span
+                    >
+                    <span *ngIf="f.confirmPassword.errors.mustMatch"
+                      >Passwords must match</span
+                    >
+                  </mdb-error>
                 </div>
-                <div class="form-group">
-                  <div>
-                    <button type="submit" class="btn btn-primary">
-                      Update Password
-                    </button>
-                  </div>
+                <div class="form-group text-center">
+                  <button
+                    mat-raised-button
+                    color="primary"
+                    [disabled]="resetForm.invalid || successMessage"
+                    class="reset-btn btn"
+                  >
+                    Update Password
+                  </button>
                 </div>
               </form>
             </div>
