update plans with contact tracing info

--- a/src/app/components/pricing-plans/pricing-plans.component.html
+++ b/src/app/components/pricing-plans/pricing-plans.component.html
@@ -106,6 +106,16 @@
               Manage your daily food and drink specials / <br />
               Gérez vos spéciaux du jour
             </li>
+            <li>
+              An optional contact tracing form / <br />
+              Un formulaire de recherche de contact optionne
+            </li>
+            <li>
+              A single QR code for your menus and your optional contact tracing
+              form / <br />
+              Un code QR unique pour vos menus et votre formulaire de recherche
+              de contact optionnel
+            </li>
           </ul>
         </div>
       </div>
@@ -141,6 +151,16 @@
             <li>
               Manage your daily food and drink specials / <br />
               Gérez vos spéciaux du jour
+            </li>
+            <li>
+              An optional contact tracing form / <br />
+              Un formulaire de recherche de contact optionne
+            </li>
+            <li>
+              A single QR code for your menus and your optional contact tracing
+              form / <br />
+              Un code QR unique pour vos menus et votre formulaire de recherche
+              de contact optionnel
             </li>
           </ul>
         </div>
